--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <meta
+      content="script-src 'self' https://e-commerce-2022.herokuapp.com/ 'unsafe-inline' 'unsafe-eval';"
+    />
     <title>Audiophile</title>
   </head>
 
