--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,9 @@
       content="Web site created using create-react-app"
     />
     <meta
-      content="script-src 'self' https://e-commerce-2022.herokuapp.com/ 'unsafe-inline' 'unsafe-eval';"
+      http-equiv="Content-Security-Policy"
+      content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://e-commerce-2022.herokuapp.com"
+    />
     />
     <title>Audiophile</title>
   </head>
