--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; img-src https://*; child-src 'none'; connect-src, https://api.stripe.com; frame-src, https://js.stripe.com, https://hooks.stripe.com; script-src, https://js.stripe.com;"
+    />
 
     <title>Audiophile</title>
   </head>
