--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; img-src https://*; child-src 'none'; connect-src, https://api.stripe.com; frame-src, https://js.stripe.com, https://hooks.stripe.com; script-src, https://js.stripe.com;"
+      content="default-src 'self'; img-src https://*; child-src 'none';"
     />
 
     <title>Audiophile</title>
