--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,10 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta
+    <!-- <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; img-src https://*; child-src 'none';"
-    />
+    /> -->
 
     <title>Audiophile</title>
   </head>
