--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,15 +4,14 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <!-- <meta
+    <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; img-src https://*; child-src 'none';"
-    /> -->
+      content="script-src-elem https://js.stripe.com/v3"
+    />
 
     <title>Audiophile</title>
   </head>
