hopefully fixed bugs.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       http-equiv="Content-Security-Policy"
-      content="script-src-elem https://js.stripe.com/v3"
+      content="script-src-elem https://js.stripe.com/v3 https://e-commerce-2022.herokuapp.com;"
     />
 
     <title>Audiophile</title>
