--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       http-equiv="Content-Security-Policy"
-      content="script-src 'self'; script-src-elem https://js.stripe.com/* https://e-commerce-2022.herokuapp.com/*;"
+      content="script-src 'self'; script-src-elem *;"
     />
 
     <title>Audiophile</title>
