--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       http-equiv="Content-Security-Policy"
-      content="script-src 'self'; script-src-elem *;"
+      content="script-src 'self' https://js.stripe.com/"
     />
 
     <title>Audiophile</title>
